--- a/plugin.xml
+++ b/plugin.xml
@@ -19,15 +19,14 @@
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
            id="cordova-plugin-fcm"
-      version="2.1.2">
+      version="0.0.1">
     <name>FCMPlugin</name>
     <description>Cordova FCM Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova, fcm, push, plugin</keywords>
     
     <info>
-		Cordova FCM plugin v2.1.2 installed
-		For more details visit https://github.com/fechanique/cordova-plugin-fcm
+		<!-- add info here -->
 	</info>
 	
     <js-module src="www/FCMPlugin.js" name="FCMPlugin">
@@ -65,8 +64,8 @@
 				</feature>
 		</config-file>
 		
-        <framework src="com.google.firebase:firebase-core:+" />
-        <framework src="com.google.firebase:firebase-messaging:+" />
+        <framework src="com.google.firebase:firebase-core:12+" />
+        <framework src="com.google.firebase:firebase-messaging:12+" />
 		
 		<framework src="src/android/FCMPlugin.gradle" custom="true" type="gradleReference"/>
 			
